--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,13 +1,13 @@
 ARG DOCKER_USER
 ARG DOCKER_REPO
 
-FROM ${DOCKER_USER}/${DOCKER_REPO}:build as build
-FROM ${DOCKER_USER}/${DOCKER_REPO}:core as deploy
+FROM ${DOCKER_USER}/${DOCKER_REPO}:devel as devel
+FROM ${DOCKER_USER}/${DOCKER_REPO}:core as base
 ARG DOCKER_USER
 ARG DOCKER_REPO
-COPY --chown=${NB_USER} --from=build ${ENV_ROOT} ${ENV_ROOT}
+COPY --chown=${NB_USER} --from=devel ${ENV_ROOT} ${ENV_ROOT}
 COPY alpine.pkg alpine.pkg
 RUN PKG=`cat alpine.pkg` && echo "Installing ${PKG}" &&  sudo apk add --no-cache ${PKG}
 COPY --chown=${NB_USER} requirements.txt requirements.txt
 RUN pip install -vv -r requirements.txt
-RUN python -m bash_kernel.install
+
