--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -1,8 +1,9 @@
 ARG VERSION
+ARG ALPINE_VERSION
 ARG DOCKER_USER
 ARG DOCKER_REPO
 
-FROM alpine:3.13.5 as core
+FROM alpine:${ALPINE_VERSION} as core
 
 ARG VERSION
 ARG PYTHON_VERSION
@@ -12,27 +13,35 @@ ARG NB_USER="jovyan"
 ARG NB_UID="1000"
 ARG NB_GID="100"
 
-LABEL maintainer="Andreas Trawöger <atrawog@dorgeln.org>" org.dorgeln.version=${VERSION} 
+LABEL maintainer="Andreas Trawöger <atrawog@dorgeln.org>"
+
+COPY alpine.pkg alpine.pkg
+RUN PKG=`cat alpine.pkg` && echo "Installing ${PKG}" &&  apk add --no-cache ${PKG}
+RUN echo '%wheel ALL=(ALL) NOPASSWD: ALL' > /etc/sudoers.d/wheel && chmod 0440 /etc/sudoers.d/wheel
 
 RUN adduser --disabled-password  -u ${NB_UID} -G users ${NB_USER} && \
     addgroup -g ${NB_UID}  ${NB_USER} && \
     adduser ${NB_USER} ${NB_USER} && \
     adduser ${NB_USER} wheel
 
-
 ENV ENV_ROOT="/env" 
+ENV BUILD_ROOT="/build"
 ENV PYENV_ROOT=${ENV_ROOT}/pyenv \
     NPM_DIR=${ENV_ROOT}/npm 
 ENV PATH="${PYENV_ROOT}/shims:${PYENV_ROOT}/bin:${NPM_DIR}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 
 RUN sed -i "s/^export PATH=/#export PATH=L/g" /etc/profile
-RUN mkdir -p ${ENV_ROOT} ${NPM_DIR} && chown -R ${NB_USER}.${NB_GID} ${ENV_ROOT}
+
 
 ENV PYTHONUNBUFFERED=true \
     PYTHONDONTWRITEBYTECODE=true \
+    TMPDIR=${BUILD_ROOT}/tmp \
     PIP_NO_CACHE_DIR=true \
+    PIP_NO_CLEAN=false \
+    PIP_CACHE_DIR=${BUILD_ROOT}/cache \
+    PIP_DOWNLOAD_CACHE=${BUILD_ROOT}/download \
     PIP_DISABLE_PIP_VERSION_CHECK=true \
-    PIP_DEFAULT_TIMEOUT=180 \
+    PIP_DEFAULT_TIMEOUT=300 \
     NODE_PATH=${NPM_DIR}/node_modules \
     NPM_CONFIG_GLOBALCONFIG=${NPM_DIR}/npmrc \
     LC_ALL=en_US.UTF-8 \
@@ -56,11 +65,9 @@ ENV PYTHONUNBUFFERED=true \
     NPY_USE_BLAS_ILP64=1 \
     MAX_CONCURRENCY=8
 
-WORKDIR ${HOME}
+RUN mkdir -p ${ENV_ROOT} ${NPM_DIR} ${TMPDIR} ${PIP_CACHE_DIR} ${PIP_DOWNLOAD_CACHE} && chown -R ${NB_USER}.${NB_GID} ${ENV_ROOT} ${BUILD_ROOT}
 
-COPY alpine.pkg alpine.pkg
-RUN PKG=`cat alpine.pkg` && echo "Installing ${PKG}" &&  apk add --no-cache ${PKG}
-RUN echo '%wheel ALL=(ALL) NOPASSWD: ALL' > /etc/sudoers.d/wheel && chmod 0440 /etc/sudoers.d/wheel
+WORKDIR ${HOME}
 
 USER ${NB_USER}
 
