--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,11 @@
 [tool.poetry]
 name = "orbiter"
-version = "0.0.18"
+version = "0.1.0"
 description = ""
 authors = ["Andreas Trawöger <atrawog@dorgeln.org>"]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.9"
-Cython = "^0.29.23"
 numpy = "^1.20.2"
 pandas = "^1.2.4"
 jupyterlab = "^3.0.14"
@@ -14,31 +13,40 @@ altair = "^4.1.0"
 altair-saver = "^0.5.0"
 nbgitpuller = "^0.9.0"
 jupyter-server-proxy = "^3.0.2"
-cysgp4 = "^0.3.3"
-Pillow = "^8.2.0"
 jupyterlab-spellchecker = "^0.5.2"
 PyYAML = "^5.4.1"
 toml = "^0.10.2"
-matplotlib = "^3.4.1"
-sshkernel = "^0.11.0"
+matplotlib = "^3.4.2"
 jupyterlab-git = "^0.30.1"
-asciinema = "^2.0.2"
-cowsay = "^4.0"
-lolcat = "^1.4"
-doit = "^0.33.1"
-black = "^21.5b0"
-flit = "^3.2.0"
-bash_kernel = "^0.7.2"
-docker = "^5.0.0"
-GitPython = "^3.1.15"
 Sphinx = "^3.5.4"
-ablog = "^0.10.18"
-pydata-sphinx-theme = "^0.6.3"
 sphinx-panels = "^0.5.2"
 jupyter-book = "^0.10.2"
-jupyterlite = "^0.0.0-alpha.0"
+invoke = "^1.5.0"
+Cython = "^0.29.23"
+h5py = "^3.2.1"
+netCDF4 = "^1.5.6"
+cowsay = "^4.0"
+sshkernel = "^0.11.0"
+bash_kernel = "^0.7.2"
+cysgp4 = "^0.3.3"
+asciinema = "^2.0.2"
+lolcat = "^1.4"
 ttygif = "^1.2.149"
+Pillow = "^8.2.0"
 nbdev = "^1.1.14"
+intake = "^0.6.2"
+intake-stac = "^0.3.0"
+sat-search = "^0.3.0"
+Fiona = "^1.8.19"
+Shapely = "^1.7.1"
+pyproj = "^3.0.1"
+Rtree = "^0.9.7"
+geopandas = "^0.9.0"
+rasterio = "^1.2.3"
+geopy = "^2.1.0"
+xarray = "^0.18.0"
+dvc = "^2.1.0"
+pydata-sphinx-theme = "^0.6.3"
 vega-datasets = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
